tdf#73025: set absolute database index fixed

DB field 'Any record' should not move the ResultSet directly but needs
to work on the selection if there is any

Change-Id: Ie66cc66afa1118bfbc44fc29889e2b36ecd074ee